main img size update - margin-b update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
     <h2 class="subtitle">Más cambios</h2>
-    <a><img src="https://github.githubassets.com/assets/GitHub-Logo-ee398b662d42.png" alt=""></a>
+    <a href="https://github.com"><img src="https://github.githubassets.com/assets/GitHub-Logo-ee398b662d42.png" alt=""></a>
   </div>
 </body>
 </html>
